--- a/packages/d029_Video/HLS.html
+++ b/packages/d029_Video/HLS.html
@@ -12,7 +12,7 @@
 
 <video id="my-hls-player" class="video-js">
   <!-- 直接访问本地文件会产生跨域问题，此为示例 -->
-  <source src="./lib/playlist_eof.m3u8" type="application/x-mpegURL"></source>
+  <source src="http:localhost:3000/static/playlist_eof.m3u8" type="application/x-mpegURL"></source>
 </video>
 
 <script>
