--- a/packages/d031_watermark/index.html
+++ b/packages/d031_watermark/index.html
@@ -9,8 +9,13 @@
         var window.username = 'demo';
     </script>
     <script src="./index.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-
+ Hello, watermark
 </body>
 </html>
