--- a/packages/d025_JointJs/index.html
+++ b/packages/d025_JointJs/index.html
@@ -9,12 +9,15 @@
 <body>
     <div id="jointdemo"></div>
     <div id="paper-links-arrowheads-path"></div>
+    <div id="custom"></div>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/lodash/lodash.js"></script>
     <script src="node_modules/backbone/backbone.js"></script>
     <script src="node_modules/jointjs/dist/joint.js"></script>
     <script src="./index.js"></script>
     <script src="./link.js"></script>
+    <script src="./custom.js"></script>
+
 
     
 </body>
